[#85] parallel processing for 'Write' mode
Refs: #85
Fixes: #85